# almost-retro-paint

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  conanprofile.linux.txt  configure-dev.sh  configure-rel.sh  untitled
.github/actions/cmake_config/: action.yml
.github/actions/install_conan_packages/: action.yml
.github/workflows/: ci.yml
config/: CMakeLists.txt  config.hpp.in
src/: CMakeLists.txt  appconfig.hpp  main.cpp
